fixing bugs on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,7 @@ a {
 }
 
 #btnScreen {
-  height: 60px;
-  width: 60px;
+  padding: .8rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,8 +100,7 @@ a {
 }
 
 #view-galery {
-  height: 80px;
-  width: 80px;
+  padding: .8rem;
   font-size: 3em;
   color: var(--purple);
   border-radius: 50%;
@@ -126,8 +124,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 80px;
-  width: 80px;
+  padding: .8rem;
   font-size: 3em;
   border-radius: 50%;
   border: 3px solid white;
@@ -137,8 +134,7 @@ a {
 }
 
 .btn:hover {
-  height: 90px;
-  width: 90px;
+  padding: 1rem;
   background-image: radial-gradient(var(--red), var(--pink));
   border: none;
 }
@@ -147,8 +143,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 80px;
-  width: 80px;
+  padding: .8rem;
   font-size: 3em;
   color: var(--purple);
   border-radius: 50%;
@@ -200,6 +195,7 @@ canvas {
   padding: 25px;
   border-radius: 50%;
   margin: 10px;
+  z-index: 1002;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transition: .2s;
 }
@@ -219,6 +215,7 @@ canvas {
   padding: 25px;
   border-radius: 50%;
   margin: 10px;
+  z-index: 1003;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   transition: .2s;
 }
